--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <img src="/image/fish.jpg" alt="Logo" class="d-inline-block align-text-top" id="logo-img">
                 <span class="image-text"><img src="/image/fast-food-outline.svg" id="fastfood">Fish & Chips restaurant</span>
              </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
+            <button class="navbar-toggler .d-block .d-sm-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav d-lg-none">
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#h">Haddock</a>
                   </li>
