--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav id="header-nav" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
              <a href="#" class="navbar-brand">
-                <img src="/image/fish.jpg" alt="Logo" class="d-inline-block align-text-top" id="logo-img">
-                <span class="image-text"><img src="/image/fast-food-outline.svg" id="fastfood">Fish & Chips restaurant</span>
+                <img src="images/fish.jpg" alt="Logo" class="d-inline-block align-text-top" id="logo-img">
+                <span class="image-text"><img src="images/fast-food-outline.svg" id="fastfood">Fish & Chips restaurant</span>
              </a>
             <button class="navbar-toggler .d-block .d-sm-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
