--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
                 <img src="images/fish.jpg" alt="Logo" class="d-inline-block align-text-top" id="logo-img">
                 <span class="image-text"><img src="images/fast-food-outline.svg" id="fastfood">Fish & Chips restaurant</span>
              </a>
-            <button class="navbar-toggler .d-block .d-sm-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
+            <button class="navbar-toggler d-block d-sm-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="nav align-vertical-auto d-none d-sm-block" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Menu</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Connect us</a>
+                </li>
+              </ul>
+            </div>        
         </div>
     </nav>    
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
