--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
-    
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />    
 
 </head>
 <body>
@@ -20,13 +20,16 @@
                 <img src="images/fish.jpg" alt="Logo" class="d-inline-block align-text-top" id="logo-img">
                 <span class="image-text"><img src="images/fast-food-outline.svg" id="fastfood">Fish & Chips restaurant</span>
              </a>
-            <button class="navbar-toggler d-block d-sm-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="nav align-vertical-auto d-none d-sm-block" id="navbarNav">
+             <div class="btn-group" role="group" aria-label="Basic example">
+                <button class="navbar-toggler d-block d-sm-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
+                <span class="navbar-toggler-icon"></span></button>
+                <button type="button" class="btn btn-primary d-none d-sm-block ms-auto">
+                <span class="material-symbols-outlined">dining</span></button>
+             </div>
+              <div class="nav d-none d-sm-block" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Menu</a>
+                  <a class="nav-link active" aria-current="page" href="#">
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Connect us</a>
@@ -34,7 +37,7 @@
               </ul>
             </div>        
         </div>
-    </nav>    
+    </nav>  
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav d-lg-none">
                   <li class="nav-item">
