--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
      <div class="carousel-item active">
-       <img src="/images/1200jpg.jpeg" class="d-block w-100 img-fluid" alt="pic">
+       <img src="images/1200jpg.jpeg" class="d-block w-100 img-fluid" alt="pic">
      </div>
      <div class="carousel-item">
-       <img src="/images/1200kitchen.jpg" class="d-block w-100 img-fluid" alt="pic">
+       <img src="images/1200kitchen.jpg" class="d-block w-100 img-fluid" alt="pic">
      </div>
      <div class="carousel-item">
-       <img src="/images/1200table.jpg" class="d-block w-100 img-fluid" alt="pic">
+       <img src="images/1200table.jpg" class="d-block w-100 img-fluid" alt="pic">
      </div>
    </div>
    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
