--- a/menu-categories.html
+++ b/menu-categories.html
@@ -52,7 +52,7 @@
   <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <div class="card" style="width: 18rem;">
-        <img src="/images/food1.jpeg" class="card-img-top" alt="...">
+        <img src="images/food1.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Fish</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -62,7 +62,7 @@
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <div class="card" style="width: 18rem;">
-        <img src="/images/food2.jpeg" class="card-img-top" alt="...">
+        <img src="images/food2.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Shrimp</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -72,7 +72,7 @@
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <div class="card" style="width: 18rem;">
-        <img src="/images/food3.jpeg" class="card-img-top" alt="...">
+        <img src="images/food3.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cardtitle </h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -82,7 +82,7 @@
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
       <div class="card" style="width: 18rem;">
-        <img src="/images/food4.jpeg" class="card-img-top" alt="...">
+        <img src="images/food4.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
