--- a/menu-categories.html
+++ b/menu-categories.html
@@ -51,7 +51,7 @@
 <div class="container-fluid category">
   <div class="row">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <div class="card" style="width: 18rem;">
+      <div class="card h-100" style="width: 18rem;">
         <img src="images/food1.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Fish</h5>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <div class="card" style="width: 18rem;">
+      <div class="card h-100" style="width: 18rem;">
         <img src="images/food2.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Shrimp</h5>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <div class="card" style="width: 18rem;">
+      <div class="card h-100" style="width: 18rem;">
         <img src="images/food3.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cardtitle </h5>
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-      <div class="card" style="width: 18rem;">
+      <div class="card h-100" style="width: 18rem;">
         <img src="images/food4.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
